# hytale-code-explainer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  eval_ragas.py  litellm-config.yaml  main.py  manual_eval.py  pyproject.toml
eval/: manual_eval.py
rag_setup/: chunking.py  embedding.py
scripts/: qdrant_export.py  qdrant_import.py
src/: config.py  utils.py
src/adapters/: llm.py  retrieval.py
src/application/: application.py
src/domain/: ports.py  prompts.py
src/interfaces/: cli.py  discord_bot.py
