[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord>=2.3.2",
    "openai>=2.15.0",
    "qdrant-client>=1.16.2",
    "ragas>=0.4.3",
    "sentence-transformers>=5.2.0",
    "tqdm>=4.67.1",
]
